# pal_robotiq_gripper

pal_robotiq_140_gripper/pal_robotiq_140_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_140_gripper/pal_robotiq_140_description/robots/: display.launch  pal_robotiq_140_gripper.urdf.xacro  upload.launch
pal_robotiq_140_gripper/pal_robotiq_140_description/urdf/: robotiq_140_gripper.transmission.xacro  robotiq_140_gripper.urdf.xacro
pal_robotiq_140_gripper/pal_robotiq_140_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_85_gripper/: CMakeLists.txt
pal_robotiq_85_gripper/pal_robotiq_85_controller_configuration/: CMakeLists.txt  package.xml
pal_robotiq_85_gripper/pal_robotiq_85_controller_configuration/config/: pids.yaml
pal_robotiq_85_gripper/pal_robotiq_85_controller_configuration/launch/: gripper_controller.launch
pal_robotiq_85_gripper/pal_robotiq_85_controller_configuration_gazebo/: CMakeLists.txt  package.xml
pal_robotiq_85_gripper/pal_robotiq_85_controller_configuration_gazebo/launch/: gripper_controller.launch
pal_robotiq_85_gripper/pal_robotiq_85_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  urdf.rviz
pal_robotiq_85_gripper/pal_robotiq_85_description/meshes/visual/: pal_robotiq_coupling.stl
pal_robotiq_85_gripper/pal_robotiq_85_description/robots/: display.launch  gazebo.launch  pal_robotiq_85_gripper.urdf.xacro  upload.launch
pal_robotiq_85_gripper/pal_robotiq_85_description/urdf/: robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro
pal_robotiq_85_gripper/pal_robotiq_85_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_controller_configuration/config/: joint_trajectory_controllers.yaml  robotiq_gripper_controller.yaml
pal_robotiq_controller_configuration/launch/: gripper_controller.launch  gripper_controller.launch.py  robotiq_gripper_controller.launch.py
pal_robotiq_controller_configuration/scripts/: home_gripper.py
pal_robotiq_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_controller_configuration_gazebo/config/: pids.yaml  pids_left.yaml  pids_right.yaml
pal_robotiq_controller_configuration_gazebo/launch/: gripper_controller.launch
pal_robotiq_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  pal_robotiq_140_urdf.rviz
pal_robotiq_description/config/: pal_robotiq_urdf.rviz
pal_robotiq_description/launch/: robot_state_publisher.launch.py  robot_state_publisher_140.launch.py  robot_state_publisher_85.launch.py  show.launch.py  show_140.launch.py  show_85.launch.py
pal_robotiq_description/robots/: pal_robotiq_140_gripper.urdf.xacro  pal_robotiq_2f_85_gripper.urdf.xacro  pal_robotiq_epick_gripper.urdf.xacro
pal_robotiq_description/urdf/: grasping_frames.xacro  robotiq.ros2_control.xacro  robotiq.transmission.xacro  robotiq_140_gripper.urdf.xacro  robotiq_85_gripper.urdf.xacro
pal_robotiq_epick_gripper/pal_robotiq_epick_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  urdf.rviz
pal_robotiq_epick_gripper/pal_robotiq_epick_description/robots/: display.launch  pal_robotiq_epick_gripper.urdf.xacro  upload.launch
pal_robotiq_epick_gripper/pal_robotiq_epick_description/urdf/: robotiq_epick_gripper.transmission.xacro  robotiq_epick_model.xacro  robotiq_epick_model_macro.xacro
pal_robotiq_epick_gripper/pal_robotiq_epick_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_gripper/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_gripper_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
pal_robotiq_gripper_wrapper/config/: robotiq-2f-140_gripper.yaml  robotiq-2f-140_gripper_left.yaml  robotiq-2f-140_gripper_right.yaml  robotiq-2f-85_gripper.yaml  robotiq-2f-85_gripper_left.yaml  robotiq-2f-85_gripper_right.yaml  robotiq-epick_gripper.yaml  robotiq-epick_gripper_left.yaml  robotiq-epick_gripper_right.yaml
pal_robotiq_gripper_wrapper/launch/: grasping_service.launch  grasping_service_simulation.launch
pal_robotiq_gripper_wrapper/scripts/: gripper_epick_grasping.py  gripper_grasping.py  gripper_grasping_simulation.py
pal_robotiq_gripper_wrapper/src/pal_robotiq_gripper_wrapper/: gripper_grasp.py
pal_robotiq_gripper_wrapper_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_robotiq_gripper_wrapper_msgs/msg/: GripperStatus.msg
