<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_controller_configuration</name>
  <version>2.0.0</version>
  <description>The pal_robotiq_controller_configuration package</description>

  <author email="sai-kishor@pal-robotics.com">Sai Kishor Kothakota</author>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <maintainer email="sai-kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>

  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <exec_depend>pal_robotiq_gripper_wrapper</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
