<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pal_robotiq_description</name>
  <version>0.0.0</version>
  <description>The pal_robotiq_description package</description>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <author email="aina.irisarri@pal-robotics.com">Aina Irisarri</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
