<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_description</name>
  <version>2.0.2</version>
  <description>The pal_robotiq_description package</description>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <author email="aina.irisarri@pal-robotics.com">Aina Irisarri</author>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
