<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_gripper</name>
  <version>0.0.19</version>
  <description>Robotiq Gripper Definition Packages</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>pal_robotiq_85_gripper</exec_depend>
  <exec_depend>pal_robotiq_140_gripper</exec_depend>
  <exec_depend>pal_robotiq_epick_gripper</exec_depend>
  <exec_depend>pal_robotiq_controller_configuration</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
