<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_gripper</name>
  <version>2.0.0</version>
  <description>Robotiq Gripper Definition Packages</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rclcpp</build_depend>


  <exec_depend>pal_robotiq_controller_configuration</exec_depend>
  <exec_depend>pal_robotiq_description</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
