<?xml version="1.0"?>
<package format="2">
  <name>pal_robotiq_gripper_wrapper_msgs</name>
  <version>0.0.7</version>
  <description>The pal_robotiq_gripper_wrapper_msg package</description>

  <author email="daniel.lopez@pal-robotics.com">Daniel López Puig</author>
  <maintainer email="daniel.lopez@pal-robotics.com">Daniel López Puig</maintainer>

  <license>Property</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  



</package>
