<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_140_gripper</name>
  <version>0.0.19</version>
  <description>Robotiq Gripper 140 Definition Packages</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>pal_robotiq_140_description</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
