<?xml version="1.0"?>
<package>
  <name>pal_robotiq_85_gripper</name>
  <version>0.0.19</version>
  <description>Robotiq Gripper 85 Definition Packages</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>pal_robotiq_85_description</run_depend>

  <export>
     <metapackage/>
  </export>
</package>
