<?xml version="1.0"?>
<package format="3">
  <name>pal_robotiq_epick_gripper</name>
  <version>0.0.19</version>
  <description>Robotiq Gripper Epick Definition Packages</description>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</maintainer>
  <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
  <author email="thomas.peyrucain@pal-robotics.com">Thomas Peyrucain</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>pal_robotiq_epick_description</exec_depend>

  <export>
     <metapackage/>
  </export>
</package>
